Fix firefox colon-gap problem on audit displays
The "sentence-case" class caused Firefox to put a gap to the left of the following colon. Seems to be a bug in Firefox, so for now I’m not sentence casing the error string.

--- a/src/encoded/static/scss/encoded/modules/_audits.scss
+++ b/src/encoded/static/scss/encoded/modules/_audits.scss
@@ -84,7 +84,7 @@ $audit-types:
     @include border-radius(4px);
     border: 1px solid #a0a0a0;
 
-    strong.sentence-case {
+    strong {
         display: inline-block;
         margin-left: 10px;
     }
